--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -2,14 +2,59 @@ body {
   background: linear-gradient(90deg, rgba(7, 0, 122, 0.75) 0%, rgba(0, 0, 79, 0.7465473989422402) 34%, rgba(9, 9, 121, 0.75) 60%, rgba(0, 112, 135, 0.75) 95%);
 }
 
-.titleListTask {
-  padding-top: 2.5vh;
-  display: flex;
-  justify-content: center;
+.titleListTask{
+  text-align: center;
+  margin-top: 5vh;
+  color: aliceblue;
 }
 
-.containerText {
+.containerText{
   text-align: center;
-  font-size: 6vw;
-  margin: 0px 8vw 0px 8vw;
+  color: aliceblue;
+  margin-bottom: 5vh;
+}
+
+thead{
+  text-align: center;
+  font-weight: bold;
+}
+
+td{
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+tbody{
+  text-align: center;
+  font-weight: bold;
+}
+
+input[type="date"]{
+  width: 100%;
+}
+
+input{
+  text-align: center;
+  font-weight: bold;
+}
+
+.conatinerBox{
+  margin-top: 10vh;
+  width: 100%;
+}
+
+h3{
+  text-align: center;
+}
+
+form {
+  margin-top: 4vh;
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+}
+
+#buttonSave{
+  margin-top: 3vh;
 }
